feat: linter refactor

--- a/.github/workflows/golang-lint.yml
+++ b/.github/workflows/golang-lint.yml
@@ -44,7 +44,7 @@ jobs:
           echo "📦 Поиск изменённых модулей..."
           
           modules=()
-          REPO_ROOT=$(pwd)
+          REPO_ROOT=$(pwd)/modules
 
           if [[ "${{ steps.filter.outputs.auth }}" == "true" ]]; then
             modules+=("$REPO_ROOT/auth")
