feat: linter refactor

--- a/.github/workflows/golang-lint.yml
+++ b/.github/workflows/golang-lint.yml
@@ -45,6 +45,8 @@ jobs:
           
           modules=()
           REPO_ROOT=$(pwd)/modules
+          
+          echo $(go list -m -json | jq -s '.' | jq -c '[.[].Dir]')
 
           if [[ "${{ steps.filter.outputs.auth }}" == "true" ]]; then
             modules+=("$REPO_ROOT/auth")
