--- a/.github/workflows/golang-lint.yml
+++ b/.github/workflows/golang-lint.yml
@@ -51,17 +51,15 @@ jobs:
             modules+=("modules/orders")
           fi
           
-          if [[ ${#modules[@]} -eq 0 ]]; then
-            echo "📦 Изменённых модулей не найдено"
-            echo "modules=[]" >> $GITHUB_OUTPUT
-          else
+          if [[ ${#modules[@]} -ne 0 ]]; then
             modules=$(printf '%s\n' "${modules[@]}" | jq -R . | jq -s . | jq -c '.')
-            echo "modules=$modules" >> $GITHUB_OUTPUT
-            echo "📦 Изменённые модули: $modules"
           fi
+          
+          echo "modules=$modules" >> $GITHUB_OUTPUT
+          echo "📦 Изменённые модули: $modules"
 
   golangci:
-    if: ${{ needs.detect-modules.outputs.modules != '[]' && needs.detect-modules.outputs.modules != '' }}
+    if: ${{ needs.detect-modules.outputs.modules != '' }}
     timeout-minutes: 60
     needs: detect-modules
     runs-on: ubuntu-latest
